Change file paths

--- a/wp-content/themes/wedontcare/src/scss/components/_type.scss
+++ b/wp-content/themes/wedontcare/src/scss/components/_type.scss
@@ -1,7 +1,7 @@
 @font-face {
   src: local("Rockwell"),
-        url("../fonts/rockwell-regular.ttf") format("truetype");
   font-display: swap;
+       url("../fonts/rockwell/rockwell-regular.ttf") format("truetype");
   font-family: "Rockwell";
   font-style: normal;
   font-weight: $font-weight-base;
