Add site header

--- a/wp-content/themes/wedontcare/src/scss/components/_layout.scss
+++ b/wp-content/themes/wedontcare/src/scss/components/_layout.scss
@@ -1,9 +1,10 @@
-main {
-  min-height: 100vh;
+.site-header {
+  margin-bottom: rem(80px);
 
-  @include only-ie {
-    min-height: none;
-    height: 100vh;
+  @include respond-above(xl) {
+    margin-bottom: rem(120px);
+  }
+}
 
 .woocommerce,
 .woocommerce-page {
