--- a/wp-content/themes/wedontcare/src/scss/style.scss
+++ b/wp-content/themes/wedontcare/src/scss/style.scss
@@ -88,3 +88,5 @@ $spacers: map-remove($spacers, 1, 2, 3, 4);
 @import "components/type";
 @import "components/media";
 @import "components/layout";
+@import "components/header";
+@import "components/nav";
