Change theme name

--- a/wp-content/themes/wedontcare-shop/style.css
+++ b/wp-content/themes/wedontcare-shop/style.css
@@ -1,7 +1,7 @@
 /*
-  Theme name: We Don't Care
+  Theme name: We Don't Care - Webshop
   Author: Viktor Chin
   Author URI: https://www.viktorchin.nl/
   Version: 0.1
-  Text Domain: wdc
+  Text Domain: wdc-shop
 */
